--- a/task1/Identify_stick.ipynb
+++ b/task1/Identify_stick.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "id": "2ebefc40-7034-4628-ad91-1cd557f03ef1",
    "metadata": {},
    "outputs": [],
@@ -25,8 +25,8 @@
     "    # assigning more bit to a pixel for comparison\n",
     "    work_frame = np.uint16(frame.copy())\n",
     "    # making a binary frame\n",
-    "    work_frame[~((work_frame[:, :, 0] > work_frame[:, :, 1] + 70) & (work_frame[:, :, 0] > work_frame[:, :, 2] + 70))] = (0, 0, 0)\n",
-    "    work_frame[((work_frame[:, :, 0] > work_frame[:, :, 1] + 70) & (work_frame[:, :, 0] > work_frame[:, :, 2] + 70))] = (255, 255, 255)\n",
+    "    work_frame[~((work_frame[:, :, 0] > work_frame[:, :, 1] + 50) & (work_frame[:, :, 0] > work_frame[:, :, 2] + 50))] = (0, 0, 0)\n",
+    "    work_frame[((work_frame[:, :, 0] > work_frame[:, :, 1] + 50) & (work_frame[:, :, 0] > work_frame[:, :, 2] + 50))] = (255, 255, 255)\n",
     "    # turn it back ot uint8\n",
     "    return np.uint8(work_frame)   \n",
     "\n",
@@ -34,19 +34,16 @@
     "# def find_blue_pixels_hsv(frame):\n",
     "#     work_frame = cv.cvtColor(frame.copy(), cv.COLOR_BGR2HSV)\n",
     "#     h, s, v = cv.split(work_frame)\n",
-    "#     s.fill(255)\n",
-    "#     v.fill(255)\n",
-    "#     hsv_image = cv.merge([h, s, v])\n",
-    "#     lower = np.array([117, 255, 255], dtype = np.uint8)\n",
-    "#     upper = np.array([127, 255, 255], dtype = np.uint8)\n",
+    "#     h[(h >= 110) & (h <= 130)] = 0\n",
+    "#     h[~(h >= 110) & (h <= 130)] = 255\n",
     "    \n",
-    "#     return cv.inRange(hsv_image, lower, upper)\n",
+    "#     return h\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "id": "7239cc8d-7e69-46f5-80f9-aab7cbce27b9",
    "metadata": {},
    "outputs": [],
@@ -56,6 +53,8 @@
     "if not cap.isOpened():\n",
     "    print(\"Cannot open camera\")\n",
     "    exit()\n",
+    "\n",
+    "kernel = np.ones((4,4),np.uint8)\n",
     "\n",
     "while True:\n",
     "    # Capture frame-by-frame\n",
@@ -70,6 +69,7 @@
     "    work_frame = find_blue_pixels_straight(frame)\n",
     "    #work_frame2  = find_blue_pixels_hsv(frame)\n",
     "    contour_frame = cv.cvtColor(work_frame.copy(), cv.COLOR_BGR2GRAY)\n",
+    "    contour_frame = cv.dilate(contour_frame, kernel, iterations = 1)\n",
     "    # to stabilize an image - making some blur\n",
     "    # from here: https://stackoverflow.com/questions/71739517/detect-squares-paintings-in-images-and-draw-contour-around-them-using-python\n",
     "    contour_frame = cv.GaussianBlur(contour_frame, (17,17), 0)\n",
@@ -84,7 +84,7 @@
     "        cv.rectangle(work_frame, (x, y), (x+w, y+h), (0, 255, 0), 2)\n",
     "\n",
     "    cv.imshow('frame', np.hstack((frame, work_frame)))\n",
-    "    #cv.imshow('frame1', np.hstack((contour_frame2, contour_frame)))\n",
+    "    #cv.imshow('frame1', work_frame2)\n",
     "    \n",
     "    if cv.waitKey(1) == ord('q'):\n",
     "        break\n",
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dee1f9a-377c-4e19-94b2-10aa942c10a4",
+   "id": "5c1cc4b3-503b-47f7-a45e-c3fea3f78392",
    "metadata": {},
    "outputs": [],
    "source": []
